--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>grp05</name>
+	<name>grp05-Codenames</name>
 	<comment>Project grp05 created by Buildship.</comment>
 	<projects>
 	</projects>
